Fix keyboard layout on ios and no scroll in background (hope it doesn’t break anything)

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -76,6 +76,10 @@ body {
   height: 100%;
   background: transparent;
 }
+html,body{
+    -webkit-overflow-scrolling : touch !important;
+    overflow: auto !important;
+}
 p, a, h1, h2, h3, h4, h5, h6 {
   font-family: arial;
   color: #fff;
